Adding Ml Models

--- a/ML/Sales_Prediction_With_LR_RFC.ipynb
+++ b/ML/Sales_Prediction_With_LR_RFC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 1,
    "id": "291e7135",
    "metadata": {},
    "outputs": [],
@@ -15,12 +15,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 2,
    "id": "259bf8f8",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = pd.read_csv('./sales_order_sheet_processed.csv')"
+    "df = pd.read_csv('../Data/sales_order_sheet_processed.csv')"
    ]
   },
   {
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 3,
    "id": "4a11e39c",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "[7991 rows x 2 columns]"
       ]
      },
-     "execution_count": 28,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 4,
    "id": "d85c73c0",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "[7983 rows x 2 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 5,
    "id": "d3177f48",
    "metadata": {},
    "outputs": [],
@@ -488,7 +488,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 6,
    "id": "495f5a4c",
    "metadata": {},
    "outputs": [
@@ -556,7 +556,7 @@
        "4 2018-10-01  2062014.0"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -569,7 +569,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
+   "id": "84cd1df2",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
    "id": "b0328aca",
    "metadata": {},
    "outputs": [
@@ -636,7 +644,7 @@
        "2018-10-01  2062014.0"
       ]
      },
-     "execution_count": 34,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -648,7 +656,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": null,
+   "id": "71bf2341",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
    "id": "52d172f6",
    "metadata": {},
    "outputs": [
@@ -725,7 +741,7 @@
        "max    2.811011e+06"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
