--- a/ML/Sales_Prediction_With_LR_RFC.ipynb
+++ b/ML/Sales_Prediction_With_LR_RFC.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 124,
    "id": "291e7135",
    "metadata": {},
    "outputs": [],
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 125,
    "id": "259bf8f8",
    "metadata": {},
    "outputs": [],
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 126,
    "id": "8af445d9",
    "metadata": {},
    "outputs": [
@@ -216,7 +216,7 @@
        "4      14579.2       1457.9200   13121.2800  "
       ]
      },
-     "execution_count": 22,
+     "execution_count": 126,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -227,7 +227,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 127,
    "id": "4a11e39c",
    "metadata": {},
    "outputs": [
@@ -334,7 +334,7 @@
        "[7991 rows x 2 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 127,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -347,7 +347,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 128,
    "id": "d85c73c0",
    "metadata": {},
    "outputs": [
@@ -454,7 +454,7 @@
        "[7983 rows x 2 columns]"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -470,7 +470,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 129,
+   "id": "2f67576c",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sales_df['month'] = sales_df['orderdate']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "id": "d3177f48",
    "metadata": {},
    "outputs": [],
@@ -488,7 +498,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 131,
    "id": "495f5a4c",
    "metadata": {},
    "outputs": [
@@ -556,7 +566,7 @@
        "4 2018-10-01  2062014.0"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 131,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -577,7 +587,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 132,
    "id": "b0328aca",
    "metadata": {},
    "outputs": [
@@ -644,7 +654,7 @@
        "2018-10-01  2062014.0"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 132,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -664,7 +674,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 133,
    "id": "52d172f6",
    "metadata": {},
    "outputs": [
@@ -741,7 +751,7 @@
        "max    2.811011e+06"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 133,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -753,7 +763,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 134,
    "id": "e0cf132d",
    "metadata": {},
    "outputs": [
@@ -763,7 +773,7 @@
        "<AxesSubplot:xlabel='orderdate'>"
       ]
      },
-     "execution_count": 36,
+     "execution_count": 134,
      "metadata": {},
      "output_type": "execute_result"
     },
@@ -788,7 +798,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 135,
    "id": "ec4fd22c",
    "metadata": {},
    "outputs": [
@@ -1084,7 +1094,7 @@
        "2020-12-01  2311084.0       2299602.0         2418754.0         2094788.0"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 135,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1100,7 +1110,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 136,
    "id": "f834d11a",
    "metadata": {},
    "outputs": [
@@ -1188,7 +1198,7 @@
        "2019-01-01  2712821.0       2713434.0         2661494.0         2062014.0"
       ]
      },
-     "execution_count": 38,
+     "execution_count": 136,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1209,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 137,
    "id": "a3e252f1",
    "metadata": {},
    "outputs": [],
@@ -1221,7 +1231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 138,
    "id": "cdead17d",
    "metadata": {},
    "outputs": [
@@ -1271,7 +1281,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 139,
    "id": "06c578ce",
    "metadata": {},
    "outputs": [],
@@ -1282,7 +1292,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 140,
    "id": "dc66a867",
    "metadata": {},
    "outputs": [
@@ -1292,7 +1302,7 @@
        "LinearRegression()"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 140,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1305,7 +1315,61 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 141,
+   "id": "b858f7d1",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[ 0.07616224, -0.31430091, -0.1239525 ]])"
+      ]
+     },
+     "execution_count": 141,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# lilear model coeficient\n",
+    "lin_model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "d3541ba9",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([3216058.47696452])"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# linear model intercept.\n",
+    "lin_model.intercept_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 143,
+   "id": "93869c52",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import seaborn as sns"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 144,
    "id": "d2b2006f",
    "metadata": {},
    "outputs": [
@@ -1335,7 +1399,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 145,
+   "id": "332dbf83",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#sns.pairplot(monthly_df,x_vars=['orderdate'],y_vars='sales',size=7,aspect=0.7)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 146,
    "id": "de6f300d",
    "metadata": {},
    "outputs": [],
@@ -1347,7 +1421,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 147,
    "id": "f8406294",
    "metadata": {},
    "outputs": [],
@@ -1357,7 +1431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 56,
+   "execution_count": 148,
    "id": "f6e22d1d",
    "metadata": {},
    "outputs": [
@@ -1383,7 +1457,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 60,
+   "execution_count": 149,
    "id": "7b579bbf",
    "metadata": {},
    "outputs": [],
@@ -1394,7 +1468,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 150,
    "id": "567eec85",
    "metadata": {},
    "outputs": [
@@ -1412,7 +1486,7 @@
        "RandomForestRegressor(max_features=3, n_estimators=10, random_state=0)"
       ]
      },
-     "execution_count": 61,
+     "execution_count": 150,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1423,7 +1497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 157,
    "id": "718de52d",
    "metadata": {},
    "outputs": [
@@ -1452,7 +1526,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 158,
    "id": "21db1d90",
    "metadata": {},
    "outputs": [
@@ -1471,8 +1545,69 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 159,
+   "id": "7995330b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "y_pred = model.predict(X_test)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 160,
+   "id": "d0233351",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "'RandomForestRegressor' object has no attribute 'coef_'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m~\\AppData\\Local\\Temp/ipykernel_4748/1245623235.py\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mmodel\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mcoef_\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: 'RandomForestRegressor' object has no attribute 'coef_'"
+     ]
+    }
+   ],
+   "source": [
+    "model.coef_"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 154,
+   "id": "d5375d7f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([2492366.7, 2528282.6, 2207023.8, 2433717.2, 2445973.3, 2345021.2])"
+      ]
+     },
+     "execution_count": 154,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "y_pred"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "0e6e5caa",
+   "id": "0b0a54e4",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31ab6859",
    "metadata": {},
    "outputs": [],
    "source": []
