--- a/ETL/Product_Sales_Data_Pipeline.ipynb
+++ b/ETL/Product_Sales_Data_Pipeline.ipynb
@@ -5,7 +5,15 @@
    "id": "1c5a4c47",
    "metadata": {},
    "source": [
-    "###  Sales Order Sheet CSV Cleaning"
+    "## Product Sales Data ETL pipeline"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ce9a5b74",
+   "metadata": {},
+   "source": [
+    "### Import Modules"
    ]
   },
   {
@@ -23,6 +31,14 @@
     "import io\n",
     "import config\n",
     "import filesourceconfig"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8364f0eb",
+   "metadata": {},
+   "source": [
+    "### Function to connect to AWS and download the files"
    ]
   },
   {
@@ -46,13 +62,20 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "18b1df57",
+   "metadata": {},
+   "source": [
+    "### Based on the filesource config value read data from AWS or local file system"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 97,
    "id": "513fb518",
    "metadata": {},
    "outputs": [],
    "source": [
-    "# file path\n",
     "filesourceconfig.filesource\n",
     "\n",
     "if filesourceconfig.filesource == 'LOCAL':\n",
@@ -1267,14 +1290,16 @@
    "id": "a833c5eb",
    "metadata": {},
    "source": [
-    "### # Multiply together"
+    "### Calculate the  Order total, Discount applied and Grand Total for each Order"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": 108,
    "id": "c3f67b34",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -1500,7 +1525,7 @@
    "id": "010e8ed3",
    "metadata": {},
    "source": [
-    "#### TO_ CSV"
+    "### Export the cleaned data to local file system"
    ]
   },
   {
@@ -1529,7 +1554,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# file path\n",
     "if filesourceconfig.filesource == 'LOCAL':\n",
     "    \n",
     "    product_path = \"../Data/products_sheet.csv\"\n",
@@ -1697,7 +1721,7 @@
    "id": "aff1dd23",
    "metadata": {},
    "source": [
-    "#### TO_CSV"
+    "### Export the cleaned data to local file system"
    ]
   },
   {
@@ -1817,7 +1841,6 @@
     }
    ],
    "source": [
-    "# Disply dataframe.\n",
     "sales_team_df.head(5)"
    ]
   },
@@ -1844,7 +1867,7 @@
     }
    ],
    "source": [
-    "# # a conicise summary of the data set\n",
+    "# Print  a conicise summary of the data set\n",
     "sales_team_df.info()"
    ]
   },
@@ -1864,7 +1887,7 @@
     }
    ],
    "source": [
-    "# Total rows and columns\n",
+    "# Print Total rows and columns\n",
     "\n",
     "print('Total rows:', sales_team_df.shape[0])\n",
     "print('Total columns:',sales_team_df.shape[1])"
@@ -1875,7 +1898,7 @@
    "id": "e7c18dcb",
    "metadata": {},
    "source": [
-    "#### TO_CSV"
+    "### Export the cleaned data to local file system"
    ]
   },
   {
@@ -1885,7 +1908,6 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# File path\n",
     "sales_team_df.to_csv('../Data/sales_team_sheet_processed.csv') "
    ]
   },
@@ -2040,7 +2062,7 @@
    "id": "a4ebd0d3",
    "metadata": {},
    "source": [
-    "#### To_CSV"
+    "### Export the cleaned data to local file system"
    ]
   },
   {
@@ -2355,7 +2377,7 @@
    "id": "dd05eabb",
    "metadata": {},
    "source": [
-    "### Merging  two data sets"
+    "### Merge Store and Region data sets, so that region value is available in store record"
    ]
   },
   {
@@ -3743,7 +3765,7 @@
    "id": "80a051dc",
    "metadata": {},
    "source": [
-    "#### To_CSV"
+    "### Export the cleaned data to local file system"
    ]
   },
   {
@@ -3762,7 +3784,7 @@
    "id": "2581972b",
    "metadata": {},
    "source": [
-    "## Create the SQL Engine"
+    "## Write the cleaned data into PostgreSQL database"
    ]
   },
   {
