--- a/ML/Sales_Prediction_With_LR_RFC.ipynb
+++ b/ML/Sales_Prediction_With_LR_RFC.ipynb
@@ -7,6 +7,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "# Import Dependencey\n",
     "import pandas as pd\n",
     "from pathlib import Path\n",
     "import matplotlib.pyplot as plt\n",
